--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="main">
-            <div class="clock">
-                <span class="color" id="hours">00</span>
-                <span class="color" >:</span>
-                <span class="color" id="min">00</span>
-                <span  class="color">:</span>
-                <span class="color" id="sec">00</span>
-                <div id="AmPm">
-                    <p class="color"></p>
+      <div class="container">
+        <h2>Random Clock</h2>
+        <div class="block">
+            <div class="main">
+                <div class="clock">
+                    <span class="color" id="hours">00</span>
+                    <span class="color" >:</span>
+                    <span class="color" id="min">00</span>
+                    <span  class="color">:</span>
+                    <span class="color" id="sec">00</span>
+                    <div id="AmPm">
+                        <p class="color"></p>
+                    </div>
                 </div>
             </div>
         </div>
+        
     </div>
     <script src="script.js"></script>
 </body>
